# scripts

./: .gitignore  Dockerfile  LICENCE  Makefile  README.adoc  TODO.wiki  backup_Arch.sh  backup_Debian.sh  backup_all.sh  backup_arch.sh  backup_base.sh  backup_gdA.sh  backup_gda.sh  backup_misc.sh  burn_Iso.sh  burn_iso_cd.sh  burn_iso_dvd.sh  changeMAC.sh  check_burn_succ.sh  check_integrity.sh  concourse.yml  connect_VPN_FH.sh  convert_vid_to_aud.sh  countdown.sh  createLinks.sh  create_links.sh  curl_list.sh  defaultGateway.sh  defaultgateway.sh  devDOWN.sh  devUP.sh  devdown.sh  devup.sh  downloadLink.sh  downloadYTList.sh  download_medialist.sh  execOnAllFiles.sh  execOnFileExt.sh  exec_cmd_on_file_ext.sh  extensionChange.sh  (+58 more)
admin/: ansible-role.sh  backup.sh  benchmark_io.py  create_db.sh  create_db_table.sh  create_db_user.sh  db_create.sh  db_create_table.sh  db_create_user.sh  debug_systemd.sh  docker_rm.sh  genpw.py  genpw.sh  giteacli.py  iptables_manage.sh  mac_generate.py  manage_iptables.sh  mount_dmcrypt_image.sh  pg_set_session.sh  pki_manage.sh  pwgen.py  rm_broken_links.sh  ssh_agent_session.sh  sudokillall.sh  sync_home_local.sh  sync_home_remote.sh  transfer_configuration_arch.sh  vault_config_ca.sh  vault_get_role_auth_param.sh  wakeup.py  wol.py
chat/: irc_msg.sh
ci/: concourse-metadata.yml  concourse.yml  metadata-concourse.ini  params.yml  run_test.yml
crypto/: encrypt.py  generate_hash_512.py
cryptography/: caesar.py  dd_urandom_base64.sh  digest_cmp.sh  encrypt.py  generate_hash_512.py
database/: db_create.sh  db_create_table.sh  (+4 more)
(+204 files in other folders)
