[project]
name = "scripts"
version = "1.0.0"
description = ""
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "attrs",
    "cattrs",
    "click",
    "PyYAML",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.hatch.build.targets.sdist]
include = [
  "*/*.py",
]
exclude = [
]

[tool.hatch.build.targets.wheel]
packages = ["."]
